--- a/daily/8/tensorflow_turtorial.ipynb
+++ b/daily/8/tensorflow_turtorial.ipynb
@@ -9,13 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/python/learn/datasets/base.py:198: retry (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use the retry module or similar alternatives.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
+    "from tensorflow.contrib.eager.python import tfe\n",
     "import numpy as np"
    ]
   },
@@ -29,19 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tf.reset_default_graph()\n",
     "W=tf.get_variable('W',shape=[])\n",
@@ -62,21 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<tf.Variable 'W1:0' shape=() dtype=float32_ref>, <tf.Variable 'W2:0' shape=() dtype=float32_ref>]\n",
-      "8.0\n",
-      "7.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tf.reset_default_graph()\n",
     "def nn():\n",
@@ -115,21 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1.8911\n",
-      "-5.8911\n",
-      "-9.8911\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tf.reset_default_graph()\n",
     "tf.set_random_seed(1)\n",
@@ -155,6 +138,168 @@
     "    _c=sess.run(loss)\n",
     "    #notice grad=X1+X2,cost=X1(W-X1-X2)+X2(W-X1-X2)=cost_old-(X1+X2)**2\n",
     "    print(_c)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# WEEK 1 <a href='https://www.coursera.org/learn/intro-tensorflow/lecture/n691C/tensors'>turtorial 1</a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "import tensorboard\n",
+    "import numpy as np\n",
+    "#tensorflow can work on eager mode,notice  tfe.enable_eager_execution() must be call at startup,call only once"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"Const_1:0\", shape=(), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tfe.enable_eager_execution()\n",
+    "a=tf.constant(1.0)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#evaluate tensor\n",
+    "with tf.Session() as sess:\n",
+    "    print(a.eval()) #eval mean evaluate a at content of sess,a shortcut of sess.run(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#visualization,using tensorboard\n",
+    "\n",
+    "x=tf.constant(3.0,name='x')\n",
+    "y=tf.constant(3.0,name='y')\n",
+    "z=tf.add(x,y,name='z')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    #tensorboard --port 8080 --logdir=/home/zhangxk/PycharmProjects/untitled/deepAI/daily/8/summary\n",
+    "    with tf.summary.FileWriter('summary',sess.graph) as writer:\n",
+    "        pass\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='images/tensor.png' />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href='https://www.tensorflow.org/api_docs/python/tf/stack'>stack doc</a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def tensorEx():\n",
+    "    tf.reset_default_graph()\n",
+    "    x1=tf.constant([1,2,3],name='x1') #(3,)\n",
+    "    x2=tf.stack([x1 ,x1],name='x2') #(2,3)\n",
+    "    x3=tf.stack([x2,x2,x2,x2],name='x3') #(4,2,3)\n",
+    "    x4=tf.stack([x3,x3],name='x4') #(2,4,2,3)\n",
+    "    print('x1 shape:'+str(x1.shape))\n",
+    "    print('x2 shape:'+str(x2.shape))\n",
+    "    print('x3 shape:'+str(x3.shape))\n",
+    "    print('x4 shape:'+str(x4.shape))\n",
+    "    \n",
+    "    #this is a example of inception implement\n",
+    "    conv3=tf.constant(np.random.randn(100,14,14,32),name='3x3')\n",
+    "    conv5=tf.constant(np.random.randn(100,14,14,16),name='5x5')\n",
+    "    conv7=tf.constant(np.random.randn(100,14,14,8),name='7x7')\n",
+    "    out=tf.concat([conv3,conv5,conv7],axis=3,name='out')\n",
+    "    print('out shape:'+str(out.shape))\n",
+    "    with tf.Session() as sess:\n",
+    "        with tf.summary.FileWriter('summary/',sess.graph) as writer:\n",
+    "            pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x1 shape:(3,)\n",
+      "x2 shape:(2, 3)\n",
+      "x3 shape:(4, 2, 3)\n",
+      "x4 shape:(2, 4, 2, 3)\n",
+      "out shape:(100, 14, 14, 56)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tensorEx()"
    ]
   },
   {
