--- a/daily/8/tensorflow_turtorial.ipynb
+++ b/daily/8/tensorflow_turtorial.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -300,6 +300,235 @@
    ],
    "source": [
     "tensorEx()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Common Error\n",
+    "### 1.Shape error\n",
+    "<a href='https://www.tensorflow.org/api_docs/python/tf/slice'>slice</a> <a href='https://www.tensorflow.org/api_docs/python/tf/squeeze'>squeeze</a> <a href='https://www.tensorflow.org/api_docs/python/tf/expand_dims'>expand_dims</a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def shape_error():\n",
+    "    A=tf.constant(shape=[2,3,4],value=1.0)\n",
+    "    B=tf.constant(shape=[2,3],value=1.0)\n",
+    "    #to fix error\n",
+    "    \n",
+    "    #1.B need rank 3,so expend [2,3,1] then brost cast\n",
+    "    #B=tf.expand_dims(B,axis=2)\n",
+    "    \n",
+    "    #2.convert A to a (2,3) matrix\n",
+    "    A=tf.slice(A,begin=[0,0,0],size=[2,3,1]) #A[0:2,0:3,0:1],shape[2,3,1]\n",
+    "    A=tf.squeeze(A,axis=-1)\n",
+    "    \n",
+    "    C=A+B\n",
+    "    \n",
+    "    print(C.get_shape())\n",
+    "shape_error()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.DataType errpr <a href='https://www.tensorflow.org/api_docs/python/tf/cast'>cast</a> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def dataType_error():\n",
+    "    A=tf.constant(shape=[2,3],value=1)\n",
+    "    B=tf.constant(shape=[2,3],value=1.0)\n",
+    "    \n",
+    "    B=tf.cast(B,tf.int32)\n",
+    "    C=A+B\n",
+    "dataType_error()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. USE debuger"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "run-start: run #1: 1 fetch (s_normal:0); 2 feeds\n",
+      "\n",
+      "TTTTTT FFFF DDD  BBBB   GGG \n",
+      "  TT   F    D  D B   B G    \n",
+      "  TT   FFF  D  D BBBB  G  GG\n",
+      "  TT   F    D  D B   B G   G\n",
+      "  TT   F    DDD  BBBB   GGG \n",
+      "\n",
+      "======================================\n",
+      "Session.run() call #1:\n",
+      "\n",
+      "Fetch(es):\n",
+      "  s_normal:0\n",
+      "\n",
+      "Feed dict:\n",
+      "  a:0\n",
+      "  b:0\n",
+      "======================================\n",
+      "\n",
+      "Select one of the following commands to proceed ---->\n",
+      "  run:\n",
+      "    Execute the run() call with debug tensor-watching\n",
+      "  run -n:\n",
+      "    Execute the run() call without debug tensor-watching\n",
+      "  run -t <T>:\n",
+      "    Execute run() calls (T - 1) times without debugging, then execute run() once more with debugging and drop back to the CLI\n",
+      "  run -f <filter_name>:\n",
+      "    Keep executing run() calls until a dumped tensor passes a given, registered filter (conditional breakpoint mode)\n",
+      "    Registered filter(s):\n",
+      "        * has_inf_or_nan\n",
+      "  invoke_stepper:\n",
+      "    Use the node-stepper interface, which allows you to interactively step through nodes involved in the graph run() call and inspect/modify their values\n",
+      "\n",
+      "For more details, see help..\n",
+      "\n",
+      "\n",
+      "tfdbg> run -f has_inf_or_nan\n",
+      "run-end: run #1: 1 fetch (s_normal:0); 2 feeds\n",
+      "4 dumped tensor(s) passing filter \"has_inf_or_nan\":\n",
+      "\n",
+      "t (ms)   Size (B) Op type   Tensor name\n",
+      "[0.000]  198      RealDiv   a/b:0\n",
+      "[0.317]  214      Transpose s_transpose:0\n",
+      "[0.389]  202      MatMul    s_normal2:0\n",
+      "[0.440]  200      Sqrt      s_normal:0\n",
+      "\n",
+      "tfdbg> pt a/b\n",
+      "Tensor \"a/b:0:DebugIdentity\":\n",
+      "  dtype: float32\n",
+      "  shape: (2, 3)\n",
+      "\n",
+      "array([[ 2.5       ,         inf,  1.41999996],\n",
+      "       [ 1.14999998,  0.51249999,  0.6857143 ]], dtype=float32)\n",
+      "\n",
+      "tfdbg> pt s_transpose\n",
+      "Tensor \"s_transpose:0:DebugIdentity\":\n",
+      "  dtype: float32\n",
+      "  shape: (3, 2)\n",
+      "\n",
+      "array([[ 2.5       ,  1.14999998],\n",
+      "       [        inf,  0.51249999],\n",
+      "       [ 1.41999996,  0.6857143 ]], dtype=float32)\n",
+      "\n",
+      "tfdbg> pt_s_normal2:0\n",
+      "ERROR: Invalid command prefix \"pt_s_normal2:0\"\n",
+      "\n",
+      "tfdbg> pt s_normal2:0\n",
+      "Tensor \"s_normal2:0:DebugIdentity\":\n",
+      "  dtype: float32\n",
+      "  shape: (2, 2)\n",
+      "\n",
+      "array([[        inf,         inf],\n",
+      "       [        inf,  2.05536032]], dtype=float32)\n",
+      "\n",
+      "tfdbg> li a/b\n",
+      "Inputs to node \"a/b\" (Depth limit = 1):\n",
+      "|- (1) _arg_a_0_0\n",
+      "|- (1) _arg_b_0_1\n",
+      "\n",
+      "Legend:\n",
+      "  (d): recursion depth = d.\n",
+      "\n",
+      "tfdbg> li s_transpose\n",
+      "Inputs to node \"s_transpose\" (Depth limit = 1):\n",
+      "|- (1) a/b\n",
+      "|  |- ...\n",
+      "|- (1) s_transpose/sub_1\n",
+      "\n",
+      "Legend:\n",
+      "  (d): recursion depth = d.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.python import debug as tf_debug\n",
+    "\n",
+    "def mydiv(a, b):\n",
+    "    s = tf.div(a,b,name='a/b')\n",
+    "    s2 = tf.matmul(s, tf.transpose(s,name='s_transpose'),name='s_normal2')\n",
+    "    return tf.sqrt(s2,name='s_normal')\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    fake_a = [\n",
+    "      [5.0, 3.0, 7.1],\n",
+    "      [2.3, 4.1, 4.8],\n",
+    "    ]\n",
+    "    fake_b = [\n",
+    "      [2, 0, 5],\n",
+    "      [2, 8, 7]\n",
+    "    ]\n",
+    "    a = tf.placeholder(tf.float32, shape=[2, 3],name='a')\n",
+    "    b = tf.placeholder(tf.float32, shape=[2, 3],name='b')\n",
+    "    k = mydiv(a, b)\n",
+    "  \n",
+    "  # Note: won't work without the ui_type=\"readline\" argument because\n",
+    "  # Datalab is not an interactive terminal and doesn't support the default \"curses\" ui_type.\n",
+    "  # If you are running this a standalone program, omit the ui_type parameter and add --debug\n",
+    "  # when invoking the TensorFlow program\n",
+    "  #      --debug (e.g: python debugger.py --debug )\n",
+    "    sess = tf_debug.LocalCLIDebugWrapperSession(sess, ui_type=\"readline\")\n",
+    "    sess.add_tensor_filter(\"has_inf_or_nan\", tf_debug.has_inf_or_nan)\n",
+    "    print(sess.run(k, feed_dict = {a: fake_a, b: fake_b}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the tfdbg> window that comes up, try the following:\n",
+    "* run -f has_inf_or_nan\n",
+    "* Notice that several tensors are dumped once the filter criterion is met\n",
+    "* List the inputs to a specific tensor:\n",
+    "* li transpose:0 \n",
+    "* Print the value of a tensor\n",
+    "* pt transpose:0\n",
+    "* Where is the inf?\n",
+    "\n",
+    "Visit https://www.tensorflow.org/programmers_guide/debugger for usage details of tfdbg"
    ]
   },
   {
