--- a/daily/8/PageRank.ipynb
+++ b/daily/8/PageRank.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -306,7 +306,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['工业', '新能源汽车产品', '新能源汽车标准', '新能源船舶标准', '商用车', '目录', '信息化', '车船税']\n"
+      "['车船税', '工业', '商用车', '新能源-汽车-产品', '新能源-汽车-标准', '新能源-船舶-标准', '目录', '信息化']\n"
      ]
     }
    ],
@@ -384,7 +384,7 @@
     "            else:\n",
     "                u_list=self.visited[u] #no need search \n",
     "            #append prefix s.content to subTree\n",
-    "            ret.extend([s.content+c for c in u_list])\n",
+    "            ret.extend([s.content+'-'+c for c in u_list])\n",
     "        \n",
     "        #if s have no subTree to visited\n",
     "        if len(ret)==0:ret.append(s.content)\n",
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -512,23 +512,23 @@
     "            if(pj-pi==1 and Wi !=Wj):\n",
     "                vstool.connect(Wi,Wj)\n",
     "        ret=vstool.DFS()\n",
-    "        return ret"
+    "        return ret,selectedWords"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "graph=Graph('tx4.txt')"
+    "graph=Graph('PR/tx1.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -537,7 +537,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'大众', '退税', '新华社', '公众', '对象', '退库', '教学大纲', '具有', '缴纳', '倡导', '广西', '财政部', '小学', '传媒', '进行', '包括', '机关', '有关', '财税', '图书', '通知', '零售', '简称', '后退', '军事', '教育', '自治区', '免税', '出现', '职业高中', '国家税务总局', '软盘', '少数民族', '注释', '具体', '掌握', '专业', '出版发行', '详见', '任务', '基地', '简并', '取得', '报纸', '含以', '财政', '行政', '政策', '指以', '辅导', '科学', '主管', '许可证', '宁夏', '传播', '期刊', '审定', '印刷', '办事处', '列入', '相应', '核算', '光盘', '制作', '部门', '开放', '参考书', '共青团', '相关', '申请', '环节', '印发', '目录', '民主党派', '利用', '延续', '政府', '练习册', '参与', '新疆维吾尔自治区', '载体', '课外读物', '营业税', '组织', '党政部门', '信息', '出版单位', '增值税', '主管部门', '名单', '分离', '优惠政策', '批准', '预字', '地震台', '批发', '追回', '方式', '理解', '规定', '变更', '办理', '内蒙古', '新疆', '注册', '普通', '残联', '知识', '行政部门', '出版物', '租型', '纳税人', '附件', '门票', '改革', '征税', '教材', '弘扬', '中等职业', '业务', '活动', '形式', '照章', '监察', '原因', '税收', '财务', '实行', '问题', '自读', '税务机关', '货物', '重组', '废止', '无法', '定义', '单位', '核准', '图册', '出版', '专员', '下列', '科学技术', '免征', '成人', '部分', '学生上课', '中国共产党', '工会', '享受', '博物馆', '征收', '起至', '管理', '入库', '开具', '电子', '税率', '盲文', '应予', '杂志', '认定', '方法', '开展', '使用', '预算', '课本', '收入', '天文馆', '下达', '读物', '接到', '国务院', '发行', '科研机构', '学生', '月份', '科普', '可抵', '范围', '科普活动', '国家', '提供', '接受', '思想', '专用发票', '税务总局', '资质', '购买方', '先征', '指定', '音像制品', '磁带', '执行', '改制', '不得', '社会保障', '气象台', '推广', '教科书', '违规', '辅助性', '中国人民银行', '老年人', '社会科学', '科技馆', '易于', '税款', '浅显', '人力资源', '介绍', '文化', '承担', '要求', '用书', '宣传', '文字', '西藏', '出版权', '学校', '企业', '教育部', '税制', '应用', '精神', '销售', '教学'}\n"
+      "{'嫌疑人', '伪造', '涉嫌', '提请', '人民检察院', '刑事诉讼法', '案件材料', '逮捕', '认为', '被害', '乐清市', '滴滴', '钟元', '作出', '女孩', '依法', '规定', '车牌号', '温州市', '公安机关', '受理', '批捕', '交由', '中华人民共和国', '执行', '嫌犯', '批准逮捕', '顺风', '决定', '车案', '公安局', '审查', '条件', '符合', '遇害案', '行为', '乘坐', '浙江省', '犯罪'}\n"
      ]
     }
    ],
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -557,13 +557,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['课本', '单位', '报纸', '出版物出版', '通知', '期刊增值税先征后退']\n"
+      "[ 0.05575416  0.04434738  0.0434743   0.0422307   0.0422307   0.04184893\n",
+      "  0.04099617  0.03634001  0.03540331  0.03130754]\n",
+      "['钟元', '依法', '顺风', '犯罪', '嫌疑人', '批准逮捕', '滴滴', '涉嫌', '乐清市', '女孩']\n",
+      "['女孩-滴滴-顺风', '涉嫌', '依法-批准逮捕-犯罪-嫌疑人-钟元', '乐清市']\n"
      ]
     }
    ],
    "source": [
     "rank,rankScore=PR(H)\n",
-    "print(graph.rank(rank,10))\n",
+    "print(rankScore[0:10])\n",
+    "a,b=graph.rank(rank,10)\n",
+    "print(b)\n",
+    "print(a)\n",
     "# print(rankScore)\n",
     "#['产品', '信息化', '商用车', '工业', '新能源', '标准', '汽车', '目录', '船舶', '车船税']"
    ]
