--- a/daily/8/google/c1/lab1.ipynb
+++ b/daily/8/google/c1/lab1.ipynb
@@ -107,7 +107,7 @@
     "Step 1\n",
     "In the SSH window of the Compute Engine instance, type:\n",
     "\n",
-    "gsutil cp earthquakes.* gs://<YOUR-BUCKET>/earthquakes/\n",
+    "gsutil cp earthquakes.*      gs:// YOUR-BUCKET/earthquakes/\n",
     "to copy the files to Cloud Storage\n",
     "\n",
     "Step 2\n",
