--- a/course4/week4/faceRecognization/Face+Recognition+for+the+Happy+House+-+v3.ipynb
+++ b/course4/week4/faceRecognization/Face+Recognition+for+the+Happy+House+-+v3.ipynb
@@ -27,15 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Using TensorFlow backend.\n"
      ]
     }
    ],
@@ -116,7 +117,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "FRmodel = faceRecoModel(input_shape=(3, 96, 96))"
@@ -125,14 +128,16 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Total Params: 3743280\n",
-      "<keras.engine.training.Model object at 0x7f55b6270a58>\n"
+      "<keras.engine.training.Model object at 0x7fee344ed2e8>\n"
      ]
     }
    ],
@@ -156,7 +161,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras.utils import plot_model\n",
@@ -237,8 +244,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: triplet_loss\n",
@@ -276,8 +285,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -302,7 +313,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#try again\n",
@@ -343,7 +356,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "FRmodel.compile(optimizer = 'adam', loss = triplet_loss, metrics = ['accuracy'])\n",
@@ -394,8 +409,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "database = {}\n",
@@ -415,27 +432,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using GPU,average seed is 0.014998 second per image\n"
+      "Using CPU,average seed is 0.078846 second per image\n"
      ]
     }
    ],
    "source": [
     "#How fast does the algrithem?\n",
+    "# Using GPU,average speed is 0.014998 second per image\n",
+    "# Using CPU,average seed is 0.078846 second per image\n",
     "start=time.time()\n",
-    "N=100\n",
+    "N=1000\n",
     "for i in range(N):img_to_encoding(\"images/arnaud.jpg\", FRmodel)\n",
     "end=time.time()\n",
     "if(tf.test.is_gpu_available()):\n",
-    "    print('Using GPU,average seed is %f second per image'%((end-start)/N))\n",
+    "    print('Using GPU,average speed is %f second per image'%((end-start)/N))\n",
     "else:\n",
-    "    print('Using CPU,average seed is %f second per image'%((end-start)/N))"
+    "    print('Using CPU,average speed is %f second per image'%((end-start)/N))"
    ]
   },
   {
@@ -451,8 +472,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model1=load_model('mymodel.h5',custom_objects={'tf':tf,'triplet_loss':triplet_loss})"
@@ -475,7 +498,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: verify\n",
@@ -528,7 +553,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -587,7 +614,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -654,7 +683,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: who_is_it\n",
@@ -715,6 +746,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -738,6 +770,27 @@
    ],
    "source": [
     "who_is_it(\"images/camera_0.jpg\", database, FRmodel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"average_pooling2d_6/transpose_1:0\", shape=(?, 256, 2, 2), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X=Input(shape=(256,6,6))\n",
+    "X=AveragePooling2D(pool_size=(3, 3), strides=(2, 2), data_format='channels_first')(X)\n",
+    "print(X)"
    ]
   },
   {
@@ -808,6 +861,276 @@
     "- The pretrained model we use is inspired by Victor Sy Wang's implementation and was loaded using his code: https://github.com/iwantooxxoox/Keras-OpenFace.\n",
     "- Our implementation also took a lot of inspiration from the official FaceNet github repository: https://github.com/davidsandberg/facenet \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dirPath = './weights'\n",
+    "fileNames = filter(lambda f: not f.startswith('.'), os.listdir(dirPath))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inception_4e_5x5_conv2_b.csv\n",
+      "inception_4a_pool_bn_v.csv\n",
+      "inception_3a_5x5_bn2_m.csv\n",
+      "inception_3a_5x5_bn1_w.csv\n",
+      "inception_5a_3x3_bn2_v.csv\n",
+      "inception_5b_3x3_bn2_v.csv\n",
+      "inception_4e_5x5_conv2_w.csv\n",
+      "inception_3c_3x3_bn2_v.csv\n",
+      "inception_4a_3x3_bn1_m.csv\n",
+      "inception_3b_5x5_bn2_v.csv\n",
+      "inception_5a_pool_conv_b.csv\n",
+      "inception_4e_5x5_bn1_w.csv\n",
+      "dense_w.csv\n",
+      "inception_3b_3x3_bn1_w.csv\n",
+      "bn3_v.csv\n",
+      "inception_5a_3x3_conv2_v.csv\n",
+      "inception_3b_1x1_conv_w.csv\n",
+      "inception_4a_3x3_bn1_b.csv\n",
+      "inception_4a_3x3_bn2_b.csv\n",
+      "inception_3b_1x1_bn_m.csv\n",
+      "inception_3c_5x5_bn2_b.csv\n",
+      "inception_3b_5x5_bn1_m.csv\n",
+      "inception_3b_3x3_conv1_w.csv\n",
+      "inception_5b_3x3_conv1_w.csv\n",
+      "inception_4a_3x3_bn1_w.csv\n",
+      "inception_3c_5x5_conv2_w.csv\n",
+      "bn1_m.csv\n",
+      "inception_3a_pool_conv_b.csv\n",
+      "inception_3a_1x1_conv_w.csv\n",
+      "inception_3a_5x5_bn2_w.csv\n",
+      "inception_3b_5x5_bn1_v.csv\n",
+      "inception_3b_pool_bn_w.csv\n",
+      "inception_3c_5x5_bn1_v.csv\n",
+      "inception_4e_5x5_bn2_b.csv\n",
+      "bn2_b.csv\n",
+      "inception_4e_5x5_bn1_v.csv\n",
+      "inception_3c_5x5_bn1_m.csv\n",
+      "inception_4e_3x3_conv1_b.csv\n",
+      "inception_3b_3x3_bn1_b.csv\n",
+      "inception_3a_3x3_conv1_w.csv\n",
+      "inception_4e_3x3_bn1_v.csv\n",
+      "inception_3b_5x5_bn2_b.csv\n",
+      "inception_4a_5x5_conv2_w.csv\n",
+      "conv2_b.csv\n",
+      "inception_5b_pool_conv_w.csv\n",
+      "inception_4a_5x5_bn2_m.csv\n",
+      "inception_3c_3x3_bn1_w.csv\n",
+      "inception_3b_3x3_bn1_v.csv\n",
+      "inception_4a_5x5_bn1_b.csv\n",
+      "bn3_m.csv\n",
+      "inception_5a_pool_bn_m.csv\n",
+      "inception_3b_1x1_bn_b.csv\n",
+      "inception_5a_1x1_conv_w.csv\n",
+      "inception_3c_5x5_conv2_b.csv\n",
+      "inception_3a_1x1_bn_m.csv\n",
+      "inception_4a_5x5_bn1_w.csv\n",
+      "inception_3c_5x5_bn1_b.csv\n",
+      "bn2_w.csv\n",
+      "inception_3c_5x5_bn1_w.csv\n",
+      "inception_3a_3x3_conv1_b.csv\n",
+      "inception_3c_3x3_bn2_m.csv\n",
+      "inception_3b_1x1_bn_w.csv\n",
+      "inception_5b_3x3_conv2_w.csv\n",
+      "inception_3a_5x5_bn2_b.csv\n",
+      "inception_4a_3x3_conv1_w.csv\n",
+      "inception_5b_3x3_bn2_m.csv\n",
+      "inception_3a_3x3_conv2_w.csv\n",
+      "inception_4a_pool_conv_w.csv\n",
+      "inception_4e_3x3_bn2_b.csv\n",
+      "inception_3a_1x1_conv_b.csv\n",
+      "inception_5a_3x3_conv2_w.csv\n",
+      "inception_4a_5x5_bn2_w.csv\n",
+      "inception_5a_3x3_bn1_v.csv\n",
+      "inception_3b_5x5_conv1_w.csv\n",
+      "inception_4a_3x3_conv1_b.csv\n",
+      "inception_4a_1x1_conv_b.csv\n",
+      "inception_4e_5x5_bn1_b.csv\n",
+      "inception_3b_5x5_bn2_m.csv\n",
+      "inception_3a_3x3_bn2_b.csv\n",
+      "inception_4a_pool_bn_w.csv\n",
+      "inception_5a_pool_conv_w.csv\n",
+      "inception_3c_5x5_bn2_m.csv\n",
+      "inception_4e_3x3_conv2_w.csv\n",
+      "inception_5a_1x1_bn_v.csv\n",
+      "inception_3a_3x3_bn1_w.csv\n",
+      "inception_3b_3x3_conv2_b.csv\n",
+      "inception_3a_5x5_conv2_b.csv\n",
+      "inception_3b_5x5_bn1_w.csv\n",
+      "bn2_m.csv\n",
+      "inception_3a_1x1_bn_v.csv\n",
+      "inception_3b_3x3_bn2_b.csv\n",
+      "inception_4a_5x5_conv2_b.csv\n",
+      "inception_4a_5x5_bn2_v.csv\n",
+      "inception_3b_3x3_conv1_b.csv\n",
+      "inception_5b_1x1_bn_m.csv\n",
+      "bn1_b.csv\n",
+      "inception_3c_3x3_conv2_w.csv\n",
+      "inception_3c_3x3_conv1_w.csv\n",
+      "inception_3c_5x5_conv1_b.csv\n",
+      "inception_3a_pool_conv_w.csv\n",
+      "inception_3c_3x3_conv2_b.csv\n",
+      "inception_4a_3x3_conv2_w.csv\n",
+      "bn2_v.csv\n",
+      "inception_3b_pool_bn_m.csv\n",
+      "inception_3a_3x3_bn1_m.csv\n",
+      "inception_3c_3x3_bn1_b.csv\n",
+      "inception_5b_1x1_conv_b.csv\n",
+      "inception_4a_3x3_bn2_v.csv\n",
+      "inception_4e_5x5_bn2_m.csv\n",
+      "inception_4e_5x5_bn2_v.csv\n",
+      "inception_3a_5x5_bn1_m.csv\n",
+      "inception_4a_5x5_conv1_b.csv\n",
+      "inception_5b_1x1_conv_w.csv\n",
+      "inception_5b_3x3_conv2_b.csv\n",
+      "inception_5a_3x3_conv2_m.csv\n",
+      "inception_3b_pool_conv_b.csv\n",
+      "inception_4e_3x3_conv1_w.csv\n",
+      "inception_5b_1x1_bn_b.csv\n",
+      "inception_3a_3x3_bn2_v.csv\n",
+      "inception_4a_1x1_bn_w.csv\n",
+      "inception_5a_pool_bn_b.csv\n",
+      "inception_3a_1x1_bn_w.csv\n",
+      "inception_5b_3x3_bn1_b.csv\n",
+      "inception_5b_pool_bn_m.csv\n",
+      "inception_3a_5x5_bn1_b.csv\n",
+      "inception_3a_5x5_bn1_v.csv\n",
+      "inception_5a_pool_bn_w.csv\n",
+      "inception_3b_5x5_bn1_b.csv\n",
+      "inception_5a_1x1_conv_b.csv\n",
+      "conv3_b.csv\n",
+      "inception_5a_1x1_bn_b.csv\n",
+      "conv3_w.csv\n",
+      "inception_5a_3x3_bn2_b.csv\n",
+      "inception_4a_5x5_bn1_m.csv\n",
+      "inception_3c_3x3_bn2_b.csv\n",
+      "inception_4a_1x1_bn_b.csv\n",
+      "inception_4a_1x1_conv_w.csv\n",
+      "inception_4a_3x3_bn2_m.csv\n",
+      "inception_3c_5x5_bn2_w.csv\n",
+      "inception_3c_3x3_bn1_m.csv\n",
+      "inception_5b_3x3_bn2_b.csv\n",
+      "dense_b.csv\n",
+      "inception_3a_pool_bn_m.csv\n",
+      "inception_3a_3x3_bn1_v.csv\n",
+      "inception_3b_5x5_bn2_w.csv\n",
+      "inception_3b_5x5_conv1_b.csv\n",
+      "inception_5a_3x3_bn2_m.csv\n",
+      "inception_5b_3x3_bn1_w.csv\n",
+      "inception_3a_1x1_bn_b.csv\n",
+      "inception_5b_pool_bn_v.csv\n",
+      "inception_4e_3x3_bn1_w.csv\n",
+      "conv1_w.csv\n",
+      "inception_5a_3x3_bn1_m.csv\n",
+      "inception_3a_3x3_bn2_w.csv\n",
+      "inception_4a_1x1_bn_m.csv\n",
+      "inception_3c_3x3_conv1_b.csv\n",
+      "inception_5a_pool_bn_v.csv\n",
+      "inception_3a_3x3_bn2_m.csv\n",
+      "inception_4e_3x3_bn2_v.csv\n",
+      "inception_4e_5x5_bn1_m.csv\n",
+      "inception_3b_pool_conv_w.csv\n",
+      "inception_3c_5x5_conv1_w.csv\n",
+      "inception_4e_5x5_conv1_w.csv\n",
+      "inception_4e_3x3_bn1_m.csv\n",
+      "inception_3c_3x3_bn1_v.csv\n",
+      "inception_3a_5x5_conv1_w.csv\n",
+      "inception_4e_5x5_bn2_w.csv\n",
+      "inception_5b_3x3_bn1_v.csv\n",
+      "inception_3a_3x3_conv2_b.csv\n",
+      "inception_4a_5x5_conv1_w.csv\n",
+      "inception_5b_1x1_bn_w.csv\n",
+      "bn3_b.csv\n",
+      "inception_3b_3x3_bn2_w.csv\n",
+      "inception_5b_pool_conv_b.csv\n",
+      "bn3_w.csv\n",
+      "inception_5b_pool_bn_w.csv\n",
+      "inception_4a_pool_bn_b.csv\n",
+      "inception_3a_pool_bn_w.csv\n",
+      "inception_3a_pool_bn_b.csv\n",
+      "conv2_w.csv\n",
+      "inception_3b_1x1_conv_b.csv\n",
+      "inception_5b_pool_bn_b.csv\n",
+      "inception_3b_3x3_bn1_m.csv\n",
+      "inception_3b_3x3_bn2_m.csv\n",
+      "inception_5a_1x1_bn_m.csv\n",
+      "inception_3b_5x5_conv2_b.csv\n",
+      "inception_4a_pool_bn_m.csv\n",
+      "inception_4e_3x3_conv2_b.csv\n",
+      "inception_3a_5x5_bn2_v.csv\n",
+      "inception_3b_3x3_bn2_v.csv\n",
+      "inception_5a_3x3_conv2_b.csv\n",
+      "inception_4e_3x3_bn2_m.csv\n",
+      "inception_3a_3x3_bn1_b.csv\n",
+      "inception_4a_3x3_conv2_b.csv\n",
+      "inception_5a_3x3_conv1_w.csv\n",
+      "inception_4e_3x3_bn1_b.csv\n",
+      "inception_3c_5x5_bn2_v.csv\n",
+      "inception_4a_3x3_bn2_w.csv\n",
+      "inception_5b_3x3_bn1_m.csv\n",
+      "conv1_b.csv\n",
+      "inception_5a_3x3_bn2_w.csv\n",
+      "bn1_w.csv\n",
+      "inception_5a_3x3_bn1_b.csv\n",
+      "bn1_v.csv\n",
+      "inception_5b_3x3_bn2_w.csv\n",
+      "inception_3b_pool_bn_v.csv\n",
+      "inception_4e_3x3_bn2_w.csv\n",
+      "inception_4a_1x1_bn_v.csv\n",
+      "inception_3a_pool_bn_v.csv\n",
+      "inception_5a_3x3_bn1_w.csv\n",
+      "inception_3b_1x1_bn_v.csv\n",
+      "inception_3a_5x5_conv1_b.csv\n",
+      "inception_4e_5x5_conv1_b.csv\n",
+      "inception_3c_3x3_bn2_w.csv\n",
+      "inception_5a_3x3_conv1_b.csv\n",
+      "inception_4a_5x5_bn1_v.csv\n",
+      "inception_4a_5x5_bn2_b.csv\n",
+      "inception_3b_3x3_conv2_w.csv\n",
+      "inception_5b_3x3_conv1_b.csv\n",
+      "inception_5b_1x1_bn_v.csv\n",
+      "inception_5a_1x1_bn_w.csv\n",
+      "inception_3a_5x5_conv2_w.csv\n",
+      "inception_4a_3x3_bn1_v.csv\n",
+      "inception_4a_pool_conv_b.csv\n",
+      "inception_3b_5x5_conv2_w.csv\n",
+      "inception_3b_pool_bn_b.csv\n",
+      "226\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=0\n",
+    "for n in fileNames:\n",
+    "    print(n)\n",
+    "    c+=1\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
