--- a/course4/week4/faceRecognization/Face+Recognition+for+the+Happy+House+-+v2.ipynb
+++ b/course4/week4/faceRecognization/Face+Recognition+for+the+Happy+House+-+v2.ipynb
@@ -27,9 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers import Conv2D, ZeroPadding2D, Activation, Input, concatenate\n",
@@ -106,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -117,11 +127,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Params: 3743280\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Total Params:\", FRmodel.count_params())"
    ]
@@ -211,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -252,11 +270,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'eval'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-1eea4a44189a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtriplet_loss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"loss = \"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'eval'"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as test:\n",
     "    tf.set_random_seed(1)\n",
@@ -678,6 +708,63 @@
     "- The pretrained model we use is inspired by Victor Sy Wang's implementation and was loaded using his code: https://github.com/iwantooxxoox/Keras-OpenFace.\n",
     "- Our implementation also took a lot of inspiration from the official FaceNet github repository: https://github.com/davidsandberg/facenet \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#using FrModel to encode database\n",
+    "def _loadDataset(path):\n",
+    "    '''\n",
+    "    \n",
+    "    \n",
+    "    :param \n",
+    "    :return:return a dict with name(key),encoder code for names(a numpy array) \n",
+    "    '''\n",
+    "    ret={}\n",
+    "    for name in os.listdir(path):\n",
+    "        ret[name]=[]\n",
+    "        db=ret[name]\n",
+    "\n",
+    "        path_name=os.path.join(path,name)\n",
+    "        for filename in os.listdir(path_name):\n",
+    "            if filename.rfind('.jpg')==-1 \\\n",
+    "                    and filename.rfind('.png')==-1 \\\n",
+    "                    and filename.rfind('.jpeg')==-1:continue\n",
+    "            samples_path=os.path.join(path_name, filename)\n",
+    "            img = face_recognition.load_image_file(samples_path)\n",
+    "            encodes=face_recognition.face_encodings(img)\n",
+    "            if len(encodes)>0:\n",
+    "                encode=encodes[0]\n",
+    "                db.append(encode)\n",
+    "            else:\n",
+    "                print(samples_path,',fail to recognize')\n",
+    "        db=np.array(db)\n",
+    "        ret[name]=db\n",
+    "        print('finish %s,data size %d'%(name,len(db)))\n",
+    "        print('------------------------------------------------------')\n",
+    "    return ret\n",
+    "\n",
+    "def getFaceDB(path_encode='FaceRecognizationDataset/faces_db_test_model2.pickle',\n",
+    "               path_image='/home/zhangxk/projects/daily/8/facedb'):\n",
+    "    db = _loadDataset(path_image)\n",
+    "    with open(path_encode, 'wb') as handle:\n",
+    "        pickle.dump(db, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "    return db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -701,7 +788,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
