--- a/cs231n/assignment1/softmax.ipynb
+++ b/cs231n/assignment1/softmax.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -29,8 +29,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "ok2\n"
      ]
     }
@@ -54,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -144,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -153,7 +151,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 2.332139\n",
+      "loss: 2.353505\n",
       "sanity check: 2.302585\n"
      ]
     }
@@ -187,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -196,26 +194,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numerical: -0.536924 analytic: -0.536924, relative error: 1.963369e-08\n",
-      "numerical: -2.430667 analytic: -2.430667, relative error: 2.951836e-08\n",
-      "numerical: -2.653761 analytic: -2.653761, relative error: 3.856596e-09\n",
-      "numerical: 1.108612 analytic: 1.108612, relative error: 2.314828e-09\n",
-      "numerical: -0.870904 analytic: -0.870904, relative error: 8.870670e-09\n",
-      "numerical: -0.816430 analytic: -0.816430, relative error: 2.368364e-08\n",
-      "numerical: 1.297893 analytic: 1.297893, relative error: 1.819020e-09\n",
-      "numerical: 1.023538 analytic: 1.023538, relative error: 2.969249e-08\n",
-      "numerical: 1.220677 analytic: 1.220677, relative error: 2.303150e-08\n",
-      "numerical: 0.463840 analytic: 0.463840, relative error: 4.804917e-08\n",
-      "numerical: -1.849577 analytic: -1.849577, relative error: 2.494223e-08\n",
-      "numerical: 1.905089 analytic: 1.905089, relative error: 1.549792e-08\n",
-      "numerical: -0.974207 analytic: -0.974207, relative error: 2.080505e-08\n",
-      "numerical: -3.136074 analytic: -3.136074, relative error: 1.095305e-08\n",
-      "numerical: -2.580115 analytic: -2.580115, relative error: 5.190196e-10\n",
-      "numerical: 1.784330 analytic: 1.784330, relative error: 5.325881e-09\n",
-      "numerical: -0.525155 analytic: -0.525155, relative error: 4.056971e-08\n",
-      "numerical: -0.754630 analytic: -0.754630, relative error: 1.765862e-08\n",
-      "numerical: -3.212922 analytic: -3.212922, relative error: 4.994318e-09\n",
-      "numerical: 1.928745 analytic: 1.928745, relative error: 2.280207e-08\n"
+      "numerical: 0.068619 analytic: 0.068619, relative error: 8.944133e-07\n",
+      "numerical: 2.344571 analytic: 2.344571, relative error: 3.199456e-08\n",
+      "numerical: -0.324288 analytic: -0.324288, relative error: 1.916545e-07\n",
+      "numerical: -0.008929 analytic: -0.008929, relative error: 1.253437e-06\n",
+      "numerical: -0.273904 analytic: -0.273904, relative error: 5.089980e-08\n",
+      "numerical: -2.020371 analytic: -2.020371, relative error: 3.891487e-08\n",
+      "numerical: -0.030159 analytic: -0.030159, relative error: 2.231997e-06\n",
+      "numerical: 2.712924 analytic: 2.712924, relative error: 3.012438e-08\n",
+      "numerical: -4.395272 analytic: -4.395272, relative error: 2.039255e-08\n",
+      "numerical: -1.577193 analytic: -1.577193, relative error: 1.818633e-08\n",
+      "numerical: -4.201006 analytic: -4.201006, relative error: 1.052507e-08\n",
+      "numerical: -0.747070 analytic: -0.747070, relative error: 8.665744e-08\n",
+      "numerical: 0.794238 analytic: 0.794237, relative error: 1.255367e-07\n",
+      "numerical: -3.867973 analytic: -3.867973, relative error: 7.427740e-10\n",
+      "numerical: 0.631100 analytic: 0.631100, relative error: 1.576284e-07\n",
+      "numerical: 0.075104 analytic: 0.075104, relative error: 1.753877e-08\n",
+      "numerical: -0.763848 analytic: -0.763848, relative error: 2.683476e-08\n",
+      "numerical: 0.167444 analytic: 0.167444, relative error: 3.094136e-07\n",
+      "numerical: 4.801552 analytic: 4.801552, relative error: 2.539629e-08\n",
+      "numerical: -0.147027 analytic: -0.147027, relative error: 5.830903e-07\n"
      ]
     }
    ],
@@ -238,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -247,8 +245,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "naive loss: 2.332139e+00 computed in 0.203000s\n",
-      "vectorized loss: 2.332139e+00 computed in 0.039000s\n",
+      "naive loss: 2.353505e+00 computed in 0.230000s\n",
+      "vectorized loss: 2.353505e+00 computed in 0.100000s\n",
       "Loss difference: 0.000000\n",
       "Gradient difference: 0.000000\n"
      ]
@@ -288,8 +286,91 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(1e-07, 50000.0)\n",
+      "iteration 0 / 1001: loss 768.452713\n",
+      "iteration 100 / 1001: loss 281.978605\n",
+      "iteration 200 / 1001: loss 104.572419\n",
+      "iteration 300 / 1001: loss 39.615203\n",
+      "iteration 400 / 1001: loss 15.843880\n",
+      "iteration 500 / 1001: loss 7.069663\n",
+      "iteration 600 / 1001: loss 3.921778\n",
+      "iteration 700 / 1001: loss 2.799519\n",
+      "iteration 800 / 1001: loss 2.372567\n",
+      "iteration 900 / 1001: loss 2.205239\n",
+      "iteration 1000 / 1001: loss 2.156657\n",
+      "(1e-07, 100000000.0)\n",
+      "iteration 0 / 1001: loss 1553451.374091\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cs231n\\classifiers\\softmax.py:74: RuntimeWarning: divide by zero encountered in log\n",
+      "  L=np.sum(-np.log(normpro[idx,y]))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iteration 100 / 1001: loss inf\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cs231n\\classifiers\\softmax.py:75: RuntimeWarning: overflow encountered in double_scalars\n",
+      "  loss=L/numtrains+0.5*reg*np.sum(W**2)\n",
+      "cs231n\\classifiers\\softmax.py:75: RuntimeWarning: overflow encountered in square\n",
+      "  loss=L/numtrains+0.5*reg*np.sum(W**2)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iteration 200 / 1001: loss inf\n",
+      "iteration 300 / 1001: loss inf\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cs231n\\classifiers\\softmax.py:78: RuntimeWarning: overflow encountered in multiply\n",
+      "  dW=np.dot(X.T,normpro)/numtrains+reg*W\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iteration 400 / 1001: loss nan\n",
+      "iteration 500 / 1001: loss nan\n",
+      "iteration 600 / 1001: loss nan\n",
+      "iteration 700 / 1001: loss nan\n",
+      "iteration 800 / 1001: loss nan\n",
+      "iteration 900 / 1001: loss nan\n",
+      "iteration 1000 / 1001: loss nan\n",
+      "(5e-07, 50000.0)\n",
+      "iteration 0 / 1001: loss 772.004419\n",
+      "iteration 100 / 1001: loss 6.881302\n",
+      "iteration 200 / 1001: loss 2.191610\n",
+      "iteration 300 / 1001: loss 2.131811\n",
+      "iteration 400 / 1001: loss 2.074291\n",
+      "iteration 500 / 1001: loss 2.144441\n",
+      "iteration 600 / 1001: loss 2.100482\n",
+      "iteration 700 / 1001: loss 2.105949\n",
+      "iteration 800 / 1001: loss 2.103770\n",
+      "iteration 900 / 1001: loss 2.093660\n",
+      "iteration 1000 / 1001: loss 2.072324\n",
       "(5e-07, 100000000.0)\n",
-      "iteration 0 / 1001: loss 758.939194\n"
+      "iteration 0 / 1001: loss 1541217.040439\n",
+      "iteration 100 / 1001: loss inf\n",
+      "iteration 200 / 1001: loss nan\n",
+      "iteration 300 / 1001: loss nan\n"
      ]
     }
    ],
@@ -313,8 +394,8 @@
     "################################################################################\n",
     "for learnrate in learning_rates:\n",
     "    for rs in regularization_strengths:\n",
-    "        print key\n",
     "        key=(learnrate,rs)\n",
+    "        print key\n",
     "        classifier=Softmax()\n",
     "        classifier.train(X_train,y_train,learnrate,rs,num_iters=1001,verbose=True)\n",
     "        train_accuracy=np.mean(classifier.predict(X_train)==y_train)\n",
@@ -409,9 +490,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -423,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
