--- a/daily/8/ml_zou/python_start.ipynb
+++ b/daily/8/ml_zou/python_start.ipynb
@@ -1046,6 +1046,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.14, 12.56, 28.259999999999998, 50.24]\n",
+      "[28.259999999999998, 50.24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#map函数的使用,https://www.youtube.com/watch?v=hUes6y2b--0\n",
+    "def area(r):\n",
+    "    return 3.14*r*r\n",
+    "a=[1,2,3,4]\n",
+    "c=list(map(area,a))\n",
+    "print(c)\n",
+    "d=list(filter(lambda x:x>20,c))\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-b88fcdc1b25a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not list"
+     ]
+    }
+   ],
+   "source": [
+    "c[d]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
