--- a/dutyStudy/hadoop/Hadoop集群安装.ipynb
+++ b/dutyStudy/hadoop/Hadoop集群安装.ipynb
@@ -235,6 +235,85 @@
     "   <value>true</value>\n",
     "</property>\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A.1 <a href='http://zookeeper.apache.org/doc/current/zookeeperAdmin.html#sc_zkMulitServerSetup'>ZOOKeeper的安装</a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-0555cd1493ed>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-0555cd1493ed>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    1.选择好要部署的机器,解压ZOOKeeper,配置环境变量.\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "1.选择好要部署的机器,解压ZOOKeeper,配置环境变量.\n",
+    "2.conf/zoo.cfg :\n",
+    "    tickTime=2000\n",
+    "    dataDir=/root/zookeeper/\n",
+    "    clientPort=2181\n",
+    "    initLimit=5\n",
+    "    syncLimit=2\n",
+    "    server.1=zoo1:2888:3888\n",
+    "    server.2=zoo2:2888:3888\n",
+    "    server.3=zoo3:2888:3888\n",
+    "    //1,2,3是id\n",
+    "3.在dataDir=/root/zookeeper/,下面创建myid文件,包含每个机器设在的id\n",
+    "4.分发节点scp -r zookeeper3.4.6 node3:`pwd`/scp -r zookeeper3.4.6 node4:`pwd`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A.2 ZooKeeper 启动,停止,查看,(机器要求半数节点启动)\n",
+    "* zkServer.sh start\n",
+    "* zkServer.sh status\n",
+    "* zkServer.sh stop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### B.1 同步 主从NN 的metadata数据<a href='https://hadoop.apache.org/docs/r3.1.1/hadoop-project-dist/hadoop-hdfs/HDFSHighAvailabilityWithQJM.html#Deployment_details'>help</a>\n",
+    "    1.启动所有的journalnode节点.hdfs --daemon start journalnode\n",
+    "    2.格式化主NN,并观察clusterID\n",
+    "        hdfs namenode -format\n",
+    "    3.standby NN同步主NN:在从机器上输入:\n",
+    "        hdfs --daemon start namenode  //先在主NN,启动namenode ,或者hadoop-daemon start namenode\n",
+    "        hdfs namenode -bootstrapStandby //再从从节点同步"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### C.格式化 zookeeper <a href='https://hadoop.apache.org/docs/r3.1.1/hadoop-project-dist/hadoop-hdfs/HDFSHighAvailabilityWithQJM.html#Initializing_HA_state_in_ZooKeeper'>help</a>\n",
+    "    hdfs zkfc -formatZK //观察zookeeper 下目录变化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
