--- a/dutyStudy/hadoop/Hadoop集群安装.ipynb
+++ b/dutyStudy/hadoop/Hadoop集群安装.ipynb
@@ -41,9 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -152,8 +150,8 @@
    "source": [
     "1.hadoop_env.sh:\n",
     "    取消HDFS_SECONDARYNAMENODE_USER\n",
-    "    添加HDFS_ZKFC_USER=root\n",
-    "        HDFS_JOURNAL_NODE_USER=root\n",
+    "    添加export HDFS_ZKFC_USER=root\n",
+    "        export HDFS_JOURNALNODE_USER=root\n",
     "2.core-site.xml:\n",
     "    A.修改hadoop.tmp.dir为一个新的/root/dfs/ha\n",
     "    \n",
@@ -171,12 +169,12 @@
     "</property>\n",
     "\n",
     "3.hdfs-site.xml \n",
-    "\n",
+    "<!--定义服务名 -->\n",
     "<property>\n",
     "  <name>dfs.nameservices</name>\n",
     "  <value>myzxk</value>\n",
     "</property>\n",
-    "<!--定义服务名称下的Name节点的名称-->\n",
+    "<!--定义服务名称下的NameNode的名称-->\n",
     "<property>\n",
     "  <name>dfs.ha.namenodes.myzxk</name>\n",
     "  <value>nn1,nn2</value>\n",
@@ -246,9 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -303,15 +299,24 @@
    "metadata": {},
    "source": [
     "### C.格式化 zookeeper <a href='https://hadoop.apache.org/docs/r3.1.1/hadoop-project-dist/hadoop-hdfs/HDFSHighAvailabilityWithQJM.html#Initializing_HA_state_in_ZooKeeper'>help</a>\n",
-    "    hdfs zkfc -formatZK //观察zookeeper 下目录变化"
+    "    hdfs zkfc -formatZK //观察zookeeper 下目录变化\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### D.启动集群;\n",
+    "    start-dfs.sh"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
