--- a/daily/8/tensorflow_turtorial.ipynb
+++ b/daily/8/tensorflow_turtorial.ipynb
@@ -9,11 +9,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/usr/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/usr/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/usr/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/usr/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/usr/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.contrib.eager.python import tfe\n",
@@ -30,11 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.6661053\n"
+     ]
+    }
+   ],
    "source": [
     "tf.reset_default_graph()\n",
     "W=tf.get_variable('W',shape=[])\n",
@@ -42,7 +65,60 @@
     "sess=tf.Session()\n",
     "sess.run(tf.global_variables_initializer())\n",
     "sess.run(W.assign(2.0))\n",
+    "# sess.run(tf.global_variables_initializer())\n",
+    "# sess.run(W.initializer)\n",
     "print(sess.run(W))\n",
+    "sess.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### problem1_1:find all uninitialize variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[b'W1' b'W2']\n",
+      "[b'W2']\n",
+      "[]\n",
+      "[[ 0.45917213  0.11933637]\n",
+      " [ 0.24807417 -0.84282833]\n",
+      " [ 0.5821041  -0.30012006]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "sess=tf.Session()\n",
+    "W1=tf.get_variable('W1',shape=[2,3])\n",
+    "W2=tf.get_variable('W2',shape=[3,2])\n",
+    "\n",
+    "uninit_vars=tf.report_uninitialized_variables()\n",
+    "print(sess.run(uninit_vars))\n",
+    "\n",
+    "sess.run(W1.assign(np.zeros((2,3))))\n",
+    "print(sess.run(uninit_vars))\n",
+    "\n",
+    "# sess.run(tf.global_variables_initializer())\n",
+    "need_init_vars=sess.run(uninit_vars)\n",
+    "op=[]\n",
+    "with tf.variable_scope('',reuse=True):\n",
+    "    for v in need_init_vars:\n",
+    "        name=v.decode(\"utf-8\")\n",
+    "        init_op=[v.initializer for v in tf.global_variables(name)]\n",
+    "        op.extend(init_op)\n",
+    "sess.run(op)\n",
+    "print(sess.run(uninit_vars))\n",
+    "print(sess.run(W2))\n",
     "sess.close()"
    ]
   },
@@ -56,9 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tf.reset_default_graph()\n",
@@ -93,15 +167,13 @@
     "collapsed": true
    },
    "source": [
-    "problem3:share parameter"
+    "## problem3:share parameter"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tf.reset_default_graph()\n",
@@ -156,9 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# tfe.enable_eager_execution()\n",
@@ -169,9 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#evaluate tensor\n",
@@ -197,9 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with tf.Session() as sess:\n",
@@ -226,9 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def tensorEx():\n",
@@ -256,9 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tensorEx()"
@@ -278,9 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def shape_error():\n",
@@ -311,9 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def dataType_error():\n",
@@ -335,9 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -390,9 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Use of tf.train.range_input_producer\n",
@@ -406,9 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "range_queue=tf.train.range_input_producer(m,num_epochs=epochs,capacity=32)\n",
@@ -420,9 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sess.run(one_depart)"
@@ -431,9 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -494,5 +542,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
