--- a/dutyStudy/hadoop/HIVE基本操作.ipynb
+++ b/dutyStudy/hadoop/HIVE基本操作.ipynb
@@ -172,9 +172,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.作业\n",
+    "   ### 1、实现struct例子:\n",
+    "        1,xiaoming:22\n",
+    "        2.xiaohong:33\n",
+    "        \n",
+    "        CREATE table student(\n",
+    "            id string,\n",
+    "            info struct<name string,age int>\n",
+    "        )\n",
+    "        ROW FORMAT DELIMITED \n",
+    "            FIELDS TERMINATED BY ','\n",
+    "            COLLECTION ITEMS TERMINATED BY ':'\n",
+    "   ### 2、基站掉话率：找出掉线率最高的前10基站\n",
+    "       原表:\n",
+    "       create table call_monitor(\n",
+    "            record_time string,\n",
+    "            imei string,\n",
+    "            cell string,\n",
+    "            ph_num string,\n",
+    "            call_num string,\n",
+    "            drop_num double,\n",
+    "            duration double,\n",
+    "            drop_rate double,\n",
+    "            net_type string,\n",
+    "            erl string\n",
+    "       )\n",
+    "       ROW FORMAT DELIMITED \n",
+    "            FIELDS TERMINATED BY ','\n",
+    "       加载数据\n",
+    "       load data local inpath '/root/cdr_summ_imei_cell_info.csv' into table jizhan; \n",
+    "       \n",
+    "       输出表:\n",
+    "       create table call_result(\n",
+    "            imei string,\n",
+    "            drop_rate double\n",
+    "       )\n",
+    "       ROW FORMAT DELIMITED \n",
+    "            FIELDS TERMINATED BY ','\n",
+    "       #插入输出\n",
+    "       from call_monitor\n",
+    "       insert into call_result\n",
+    "           select imei,sum(drop_num)/sum(duration) drate group by imei order by drate desc\n",
+    "   ### 3、使用hive实现wordcount"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
